--- a/spring-security-example_v3_jwt/src/main/resources/application.properties
+++ b/spring-security-example_v3_jwt/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path=/spring-rest
+
 spring.datasource.url=jdbc:mysql://localhost:3306/sergey_spring-rest
 spring.datasource.username=sergey_spring-rest
 spring.datasource.password=sergey_spring-rest
@@ -8,3 +10,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# エラーが発生した場合に、traceを戻さないようにする
+server.error.include-stacktrace=never
