--- a/spring-oauth2-example/api-gateway/src/main/resources/application.properties
+++ b/spring-oauth2-example/api-gateway/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.cloud.gateway.routes[1].uri=http://localhost:8081
 spring.cloud.gateway.routes[1].predicates[0]=Path=/users
 spring.cloud.gateway.routes[1].predicates[1]=Method=GET
 spring.cloud.gateway.routes[1].filters[0]=RemoveRequestHeader=Cookie
+
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
