216_spring-security6-google-oauth

--- a/216_spring-security6-google-oauth/src/main/resources/application.properties
+++ b/216_spring-security6-google-oauth/src/main/resources/application.properties
@@ -4,5 +4,5 @@
 spring.security.oauth2.client.registration.google.client-id=
 
 # クライアントシークレット
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-secret=
 
