--- a/402_spring-data-jdbc/src/main/resources/application.properties
+++ b/402_spring-data-jdbc/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.h2.console.path=/h2-console
 
 logging.level.org.springframework.jdbc.core=TRACE
 spring.jpa.properties.hibernate.show_sql=true
+
+# logging.level.org.springframework.data=INFO
+# logging.level.org.springframework.jdbc.core.JdbcTemplate=TRACE
