--- a/308_spring-thymeleaf-crud/src/main/resources/application.properties
+++ b/308_spring-thymeleaf-crud/src/main/resources/application.properties
@@ -1,9 +1,21 @@
 spring.application.name=demo
 
-spring.datasource.url = jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username = springstudent
-spring.datasource.password = springstudent
+
+
+#spring.datasource.url = jdbc:mysql://localhost:3306/employee_directory
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username = springstudent
+#spring.datasource.password = springstudent
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.initialization-mode=always
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql = true
 
 logging.level.root = info
 logging.level.org.hibernate.SQL = debug
