--- a/603_springboot-test/src/main/resources/application.properties
+++ b/603_springboot-test/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-info.school.name=luv2code
-info.app.name=My Super Cool Gradebook
-info.app.description=a fun way to track student grades!
-info.app.version=1.0.0
+spring.application.name=demo
 
+spring.jpa.show-sql = true
+logging.file.name=test.log
+
+spring.datasource.url = jdbc:mysql://localhost:3306/springboot_test_ems
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username = springstudent
+spring.datasource.password = springstudent
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
